BUGIFX: fixed a layout issue in IE6
the tricks used the wrong parent for position:absolute. this might fix it.

--- a/css/standard007.css
+++ b/css/standard007.css
@@ -152,6 +152,7 @@ div.table div.table3 {
 
 ul.tricks {
   position:relative;
+  zoom:1; /* fixes an IE6 issue and hopefully doesn't mess up anything else */
   list-style:none;
   margin:3px;
   padding:0;
